--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "amfe-flexible": "^2.2.1",
     "marked": "^15.0.12",
     "pinia": "^3.0.2",
+    "vant": "^4.9.21",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
